--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
         </div>
         <div id="icon_cloud"><a href="#"><i class="fa-solid fa-cloud"></i></a></div>
     </header>
+
+
     <section class="img_information_sm">
-        <img src="sumo.png" alt="">
-        <div id="n_sm">
-            <h1>Sumo</h1>
+        <div class="box">
+            <img src="sumo.png" alt="">
         </div>
-        <div id="j_sm">
-            <h2>Developer</h2>
-        </div>
-        <div class="icon_contact_info">
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-phone"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+        <div class="box_container">
+            <div id="n_sm">
+                <h1>Sumo</h1>
+            </div>
+            <div id="j_sm">
+                <h2>Developer</h2>
+            </div>
+            <div class="icon_contact_info">
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-phone"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+            </div>
         </div>
     </section>
+
+
     <section class="information_sm">
         <div class="text_above">
             <div class="about_me">
