done both of html and css. but needs to fix the bug

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 
     <section class="information_sm">
-        <div class="text_above">
+        <span class="text_above">
             <div class="about_me">
                 <h1>About me</h1>
             </div>
-            <div>
+            <div class="li_info">
                 <li>19</li>
                 <li>Laos</li>
                 <li>Freelance</li>
@@ -52,8 +52,11 @@
             <div class="text_information">
                 <p>Prolific, full stack web developer with a passion for metrics and beating former "best-yets". Prototyped 25 new product features per year for Flexor, Inc. Decreased rework by 22% and costs by 15%. Consistently receive high user experience scores for all web development projects, including a 55% increase for Flexor, Inc. Passionate about buidling world class web applications. One of my sites received a 2020 Webby for Best Navigation and Structure.</p>
             </div>
-        </div>
-        <div class="text_under">
+        </span>
+
+
+
+        <span class="text_under">
             <div>
                 <h1>
                     My services
@@ -62,18 +65,26 @@
             <div class="grid_container">
                 <div class="item">
                     <i class="fa-solid fa-camera"></i>
+                    <h2>Development</h2>
+                    <p>Buding a custom tailored solution based on your technical specification.</p>
                 </div>
                 <div class="item">
                     <i class="fa-solid fa-code"></i>
+                    <h2>Coding</h2>
+                    <p>Audit your website, perform technical improvements and write meta tages.</p>
                 </div>
                 <div class="item">
                     <i class="fa-solid fa-microphone"></i>
+                    <h2>Microphoner</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, obcaecati.</p>
                 </div>
                 <div class="item">
                     <i class="fa-solid fa-tv"></i>
+                    <h2>Networking</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, necessitatibus!</p>
                 </div>
             </div>
-        </div>
+        </span>
     </section>
 
     
